--- a/index.html
+++ b/index.html
@@ -6763,7 +6763,24 @@
       max-width: 100%;
     }
 
-    .sd[data-s-c47e1866-f975-4865-a0cb-b1f931b5e0dd] {}
+    video {
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      object-fit: cover;
+      margin: 0 auto;
+    }
+
+    @media screen and (max-width: 768px) {
+      video {
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+        object-fit: cover;
+        margin: 0 auto;
+        margin-top: 140px;
+      }
+    }
   </style>
   <link rel="https://api.w.org/" href="https://pons.co.jp/wp-json/">
   <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://pons.co.jp/xmlrpc.php?rsd">
@@ -6818,22 +6835,11 @@
   <main>
     <h1 class="top" style="display: none">株式会社ぽんす</h1>
     <div class="bg-circle" style="opacity: 0;"></div>
-    <div id="main-visual">
-      <div class="wrap">
-        <picture class="img-copy">
-          <source media="(max-width: 768px)" srcset="images/main_copy_sp.png">
-          <img src="images/main_copy.png" alt="企業のYouTube活用で
-集客・採用課題を解決 -当社役員がご担当させていただくため、貴社の経営目線に立ったご支援が可能-">
-        </picture>
-        <div class="img-symbol">
-          <img src="images/symbol.svg" alt="">
-        </div>
-        <div class="block-scroll">
-          <p>SCROLL</p>
-        </div>
-      </div>
+    <div class="wrap">
+      <video src="images/ponsHP_FV6.mp4" autoplay="" loop="" muted="">
+        <img src="images/ponsHP_FV6.mp4" alt="Placeholder">
+      </video>
     </div>
-
     <article id="service">
       <div class="wrap">
         <h2 class="top01"><span class="en">Service</span><span class="ja">事業内容</span></h2>
@@ -6901,13 +6907,10 @@
         <div class="message_contents_wrap">
           <div class="message_contents_wrap_txt">
             <p class="mb_25_pc mb_15 aos-init aos-animate" data-aos="fade">
-              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-            <p class="mb_25_pc mb_15 aos-init aos-animate" data-aos="fade">
-              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-            <p class="mb_25_pc mb_15 aos-init" data-aos="fade">
-              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
+              様々な企業・クリニックのマーケティングに関わらせていただく中で、常に痛感することがあります。「正解は１つでもない、１つの正解が永遠に続くこともない」ということです。<br>
+              特にSNSマーケティング領域は、トレンドなどに左右されるためPDCAを回し続けて常に正解を模索する領域です。<br>
+              また、SNSマーケターは「SNSの伸び」のみをKPI・KGIを設定してしまうことが多いですが、弊社はその先にある「予約数・購入数」などの貴社が設定するCVまでも追求します。<br>
+              弊社は「SNSマーケティングを通じて誰でも勝てる未来を」を掲げ、貴社の事業に最適な施策を立案し、目標達成まで伴走致します。</p>
           </div>
           <div class="message_contents_wrap_img">
             <img src="images/about-us-message.jpg" data-aos="fade" class="aos-init aos-animate">
@@ -6922,198 +6925,6 @@
         </div>
       </div>
     </article>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div data-s-42d5a125-f982-47f1-9e49-98de51751dfa="" class="sd appear">
-      <div data-s-fd37fb89-51ea-4b7a-a038-d8370eab97fd="" class="sd appear">
-        <section data-s-f3082a2d-f23c-424c-a87c-203b8a63305b="" class="section sd appear">
-          <article id="member">
-            <div class="content-wrap">
-              <div data-s-section-inner-f3082a2d-f23c-424c-a87c-203b8a63305b="" class="section-inner sd appear">
-                <div data-s-66e79102-d48d-4f27-af99-63691f06376f="" class="sd appear">
-                  <div data-s-2517f9ff-cf95-423e-a0a3-6da66ef7f682="" class="sd appear">
-                    <div data-s-41012ccd-6a64-41b8-bb73-f6522d911ae9="" class="sd appear"></div>
-                    <p data-s-135e7077-109b-4578-a2a3-92f7488b8872=""
-                      data-r-1_0_0_0_0_0_8_135e7077-109b-4578-a2a3-92f7488b8872="" class="text sd appear">OTHER CASES
-                    </p>
-                    <div data-s-490c98d3-6d4c-4f78-b1da-958b5b26eae7="" class="sd appear"></div>
-                  </div>
-                  <p data-s-0460663a-96d0-414c-9e5b-e5c68405f9f4=""
-                    data-r-1_0_0_0_0_8_0460663a-96d0-414c-9e5b-e5c68405f9f4="" class="text sd appear">タイトルタイトルタイトルタイトル
-                  </p>
-                  <p data-s-1351ab70-c24f-4951-a610-b652c8a47b8e=""
-                    data-r-2_0_0_0_0_8_1351ab70-c24f-4951-a610-b652c8a47b8e="" class="text sd appear">
-                    タイトルタイトル<br>タイトルタイトルタイトル</p>
-                </div>
-                <ul data-s-0d0ee517-9f8b-4f5b-8752-222f668cba06="" class="sd appear"><a href="#" rel="noopener"
-                    target="_blank" data-s-23dc07f6-ec1d-4c60-82eb-c1b9878cce59="" class="sd appear"><img
-                      data-s-7c239d46-7f30-4fe5-9624-fe200d6d42bb="" class="sd" alt="" src="images/support_img.webp">
-                    <div data-s-b793c26b-aeed-47e0-b3fe-47df65b5656e="" class="sd appear">
-                      <p data-s-8dd11a72-78c4-4c2c-8c5c-9df576541e2a=""
-                        data-r-0_1_0_1_0_0_0_8_8dd11a72-78c4-4c2c-8c5c-9df576541e2a="" class="text sd appear">
-                        タイトルタイトルタイトルタイトル</p>
-                      <p data-s-a61bfbd9-58f1-4a22-86d6-fa2a17948c62=""
-                        data-r-1_1_0_1_0_0_0_8_a61bfbd9-58f1-4a22-86d6-fa2a17948c62="" class="text sd appear">
-                        テキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                      <p data-s-cd31a73a-2b30-457c-83cd-6fab4f733806=""
-                        data-r-2_1_0_1_0_0_0_8_cd31a73a-2b30-457c-83cd-6fab4f733806="" class="text sd appear">詳しく見る</p>
-                    </div>
-                  </a><a href="#" rel="noopener" target="_blank" data-s-23dc07f6-ec1d-4c60-82eb-c1b9878cce59=""
-                    class="sd appear"><img data-s-7c239d46-7f30-4fe5-9624-fe200d6d42bb="" class="sd" alt=""
-                      src="images/support_img.webp">
-                    <div data-s-b793c26b-aeed-47e0-b3fe-47df65b5656e="" class="sd appear">
-                      <p data-s-8dd11a72-78c4-4c2c-8c5c-9df576541e2a=""
-                        data-r-0_1_1_1_0_0_0_8_8dd11a72-78c4-4c2c-8c5c-9df576541e2a="" class="text sd appear">
-                        タイトルタイトルタイトルタイトル</p>
-                      <p data-s-a61bfbd9-58f1-4a22-86d6-fa2a17948c62=""
-                        data-r-1_1_1_1_0_0_0_8_a61bfbd9-58f1-4a22-86d6-fa2a17948c62="" class="text sd appear">
-                        テキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                      <p data-s-cd31a73a-2b30-457c-83cd-6fab4f733806=""
-                        data-r-2_1_1_1_0_0_0_8_cd31a73a-2b30-457c-83cd-6fab4f733806="" class="text sd appear">詳しく見る</p>
-                    </div>
-                  </a><a href="#" rel="noopener" target="_blank" data-s-23dc07f6-ec1d-4c60-82eb-c1b9878cce59=""
-                    class="sd appear"><img data-s-7c239d46-7f30-4fe5-9624-fe200d6d42bb="" class="sd" alt=""
-                      src="images/support_img.webp">
-                    <div data-s-b793c26b-aeed-47e0-b3fe-47df65b5656e="" class="sd appear">
-                      <p data-s-8dd11a72-78c4-4c2c-8c5c-9df576541e2a=""
-                        data-r-0_1_2_1_0_0_0_8_8dd11a72-78c4-4c2c-8c5c-9df576541e2a="" class="text sd appear">
-                        タイトルタイトルタイトルタイトル</p>
-                      <p data-s-a61bfbd9-58f1-4a22-86d6-fa2a17948c62=""
-                        data-r-1_1_2_1_0_0_0_8_a61bfbd9-58f1-4a22-86d6-fa2a17948c62="" class="text sd appear">
-                        テキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                      <p data-s-cd31a73a-2b30-457c-83cd-6fab4f733806=""
-                        data-r-2_1_2_1_0_0_0_8_cd31a73a-2b30-457c-83cd-6fab4f733806="" class="text sd appear">詳しく見る</p>
-                    </div>
-                  </a></ul>
-                <ul data-s-8225719e-a5de-4c6b-a018-78878e88ca20="" class="sd appear">
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_0_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_1_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_2_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_3_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_4_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_5_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_6_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_7_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_8_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_9_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">
-                        アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_10_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                  <li data-s-51521149-29a7-4f85-b3ab-016e92735086="" class="sd appear">
-                    <div data-s-0ed352ac-bcca-4993-befb-9781992e51a8="" class="sd appear"><img
-                        data-s-917c074b-fd6a-442f-be38-e8fa33e8da5b="" class="sd" alt="" src="images/icon.svg">
-                      <p data-s-9171be03-f9fa-42aa-9005-14aedf06ba8f=""
-                        data-r-1_0_11_2_0_0_0_8_9171be03-f9fa-42aa-9005-14aedf06ba8f="" class="text sd appear">アイコン名</p>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </article>
-        </section>
-      </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
   </main>
 
   <!-- フッター共通部分 -->
