--- a/others.html
+++ b/others.html
@@ -53,6 +53,19 @@
   <link rel="stylesheet" id="app-style-css"
     href="https://www.keihi.com/app/themes/beartail/assets/css/common.css?ver=1718938794" type="text/css" media="all">
   <link rel="stylesheet" href="https://www.keihi.com/app/themes/beartail/assets/css/common_parts.css?1718938794">
+  <style>
+    section.mv {
+      margin-top: 140px;
+      height: 700px;
+    }
+
+    @media screen and (max-width:768px) {
+      section.mv {
+        margin-top: 70px;
+        height: 700px;
+      }
+    }
+  </style>
 
 </head>
 
@@ -185,23 +198,23 @@
 
             <div class="reason_flex bottom">
               <div class="reason_item left">
-                <div class="reason_subheading"><span class="reason_no">01</span>YouTubeの
-                  <br>発信を一気通貫で対応
-
+                <div class="reason_subheading"><span class="reason_no">01</span>YouTubeの発信を<br>一気通貫で対応
                 </div>
                 <div class="reason_img"><noscript><img src="./assets/images/cont03_img1.jpg"
                       alt="完全ペーパーレスを実現"></noscript><img class=" lazyloaded" src="./assets/images/cont03_img1.jpg"
                     data-src="./assets/images/cont03_img1.jpg" alt="完全ペーパーレスを実現"></div>
-                <div class="reason_text">市場調査／YouTubeの戦略立案企画／動画制作／改善／投稿</div>
-
+                <div class="reason_text">
+                  YouTubeの市場調査から戦略立案・企画の立案・動画制作<br>投稿・分析改善までを貴社オーダーメイド、ワンストップでご支援。<br>常にゴールを見据えた運用で、課題解決にフルコミットします。
+                </div>
               </div>
               <div class="reason_item right">
-                <div class="reason_subheading"><span class="reason_no">02</span>現役医師が監修で医療専門の<br>リテラシーも高くご支援可能</div>
+                <div class="reason_subheading"><span class="reason_no">02</span>データドリブンから導かれる<br>成功確度の高いチャンネル設計</div>
                 <div class="reason_img"><noscript><img src="./assets/images/cont03_img02.jpg"
                       alt="完全ペーパーレスを実現"></noscript><img class=" lazyloaded" src="./assets/images/cont03_img02.jpg"
                     data-src="./assets/images/cont03_img02.jpg" alt="完全ペーパーレスを実現"></div>
-
-
+                <div class="reason_text">
+                  「YouTubeの成功を科学する」それが私たちの強みです。<br>20ジャンル以上の経験と、50チャンネル以上の成長支援実績を活かしデータ分析と革新的アイデアを融合。常識にとらわれない発想と再現性の高いノウハウで、成功への道筋を明確に示します。
+                </div>
               </div>
             </div>
           </div>
@@ -288,8 +301,8 @@
               <div class="cont7-text">
                 <div class="ttl">
                   <p class="cont7-step">Step 01</p>
-                  <h3 class="cont7-ttl">無料のご相談<span style="letter-spacing: -5;">・</span><br class="cont7-ttl_sp">ヒアリング<span
-                      style="font-size: 16px"><br class="cont7-ttl_sp">(毎月10院限定)</span>
+                  <h3 class="cont7-ttl">無料のご相談<span style="letter-spacing: -5;">・</span><br
+                      class="cont7-ttl_sp">ヒアリング<span style="font-size: 16px"><br class="cont7-ttl_sp">(毎月10院限定)</span>
                   </h3>
                 </div>
                 <p class="cont7-description">
@@ -365,7 +378,7 @@
                     <td class="bg_3">
                       <div class="big">運用代行<br>プラン</div>
                       <div class="plan_t">
-                        動画制作プランとコンサルプランを組み合わせた一気通貫プラン。クリニックの方々に必要なのは熱意と情熱だけ。</div>
+                        動画制作プランとコンサルプランを組み合わせた一気通貫プラン。企業の方々に必要なのは熱意と情熱だけ。</div>
                     </td>
                   </tr>
                   <tr>
@@ -448,7 +461,8 @@
             その他、お客様の運用状況／サービス内容／ご希望に合わせてサービス内容や料金を柔軟にカスタマイズすることも可能です。<br>各プランの詳細内容についてはサービス紹介資料にてご確認ください。
           </p>
           <div class="link">
-            <a href="https://ssl.form-mailer.jp/fms/1bbc88d4823445" rel="noreferrer noopener" target="_blank">資料ダウンロード</a>
+            <a href="https://ssl.form-mailer.jp/fms/1bbc88d4823445" rel="noreferrer noopener"
+              target="_blank">資料ダウンロード</a>
           </div>
         </div>
       </div>
@@ -458,7 +472,7 @@
 
     <section class="cont8 cta">
       <div class="inner">
-        <h2 class="cta_font">集患・採用に関する課題やコスト削減を解決！</h2>
+        <h2 class="cta_font">集客・採用に関する課題やコスト削減を解決！</h2>
         <ul class="links">
           <li><a href="https://ssl.form-mailer.jp/fms/1bbc88d4823445" rel="noreferrer noopener"
               target="_blank"><span>もっと詳しく知りたい方</span>資料ダウンロード</a></li>
