--- a/index.html
+++ b/index.html
@@ -6836,8 +6836,8 @@
     <h1 class="top" style="display: none">株式会社ぽんす</h1>
     <div class="bg-circle" style="opacity: 0;"></div>
     <div class="wrap">
-      <video src="images/ponsHP_FV6.mp4" autoplay="" loop="" muted="">
-        <img src="images/ponsHP_FV6.mp4" alt="Placeholder">
+      <video src="images/ponsHP_FV.mp4" autoplay="" loop="" muted="">
+        <img src="images/ponsHP_FV.mp4" alt="Placeholder">
       </video>
     </div>
     <article id="service">
