--- a/index.html
+++ b/index.html
@@ -6832,7 +6832,7 @@
     <h1 class="top" style="display: none">株式会社ぽんす</h1>
     <div class="bg-circle" style="opacity: 0;"></div>
     <div class="wrap">
-      <video src="images/ponsHP_FV.mp4" autoplay="" loop="" muted="">
+      <video src="images/ponsHP_FV.mp4" autoplay="" loop="" muted="" autoplay muted playsinline>
       </video>
     </div>
     <article id="service">
