--- a/others.html
+++ b/others.html
@@ -56,13 +56,13 @@
   <style>
     section.mv {
       margin-top: 140px;
-      height: 700px;
+      height: auto;
     }
 
     @media screen and (max-width:768px) {
       section.mv {
         margin-top: 70px;
-        height: 700px;
+        height: auto;
       }
     }
   </style>
