--- a/others.html
+++ b/others.html
@@ -298,7 +298,7 @@
                 <div class="ttl">
                   <p class="cont7-step">Step 01</p>
                   <h3 class="cont7-ttl">無料のご相談<span style="letter-spacing: -5;">・</span><br
-                      class="cont7-ttl_sp">ヒアリング<span style="font-size: 16px"><br class="cont7-ttl_sp">(毎月10院限定)</span>
+                      class="cont7-ttl_sp">ヒアリング<span style="font-size: 16px"><br class="cont7-ttl_sp">(毎月10社限定)</span>
                   </h3>
                 </div>
                 <p class="cont7-description">
@@ -468,7 +468,7 @@
         <ul class="links">
           <li><a href="https://ssl.form-mailer.jp/fms/1bbc88d4823445" rel="noreferrer noopener"
               target="_blank"><span>もっと詳しく知りたい方</span>資料ダウンロード</a></li>
-          <li><a href="#btmForm"><span>毎月<b>10</b>院限定の無料相談</span>今すぐ話をきいてみる</a></li>
+          <li><a href="#btmForm"><span>毎月<b>10</b>社限定の無料相談</span>今すぐ話をきいてみる</a></li>
         </ul>
       </div>
     </section>
